small corrections, station not found and update user bugs corrected